Thu Oct 16 13:29:41 CEST 2014
d/jdk-7u71-i586-1_microlinux.txz: Upgraded.
l/eigen3-3.1.2-i486-1_microlinux.txz: Added.
l/vigra-1.10.0-i486-1_microlinux.txz: Added.
xap/enblend-enfuse-4.1.2-i486-1_microlinux.txz: Added.
+--------------------------+
Sun Oct 12 10:48:37 CEST 2014
l/libupnp-1.6.17-i486-1_microlinux.txz: Added.
+--------------------------+
Thu Oct  9 07:27:00 CEST 2014
xap/gnote-0.7.6-i486-2_microlinux.txz: Added.
xap/winff-1.5.3-i486-1_microlinux.txz: Added.
  WinFF doesn't have any particular runtime dependencies except ffmpeg, but
	it's written in Free Pascal, so you'll need a Free Pascal Compiler on your
	machine if you want to build it from source. Make sure to install packages
	fpc, fpc-source and lazarus before launching the build. They're all available
	on SlackBuilds.org.
x/slack-wallpapers-0.341-noarch-1_microlinux.txz: Added.
+--------------------------+
Mon Sep 29 17:54:00 CEST 2014
locale/mozilla-firefox-l10n-24.8.1-i486-1_microlinux.txz: Upgraded.
locale/mozilla-thunderbird-l10n-24.8.1-i486-1_microlinux.txz: Upgraded.
l/liblqr-0.4.1-i486-1_microlinux.txz: Added.
l/lensfun-0.2.8-i486-3_microlinux.txz: Added.
l/opencv-2.4.9-i486-1_microlinux.txz: Added.
+--------------------------+
Thu Sep 25 06:17:55 CEST 2014
multimedia/openjpeg2-2.1.0-i486-1_microlinux.txz: Removed.
xap/mupdf-1.5-i486-4_microlinux.txz: Removed.
  We already have Okular and Evince, and Firefox doesn't need MuPDF to display
	PDF files. Thanks to fsLeg, gegechris99 and Didier Spaier on LQ for the
	heads-up. 
multimedia/dvdauthor-0.7.1-i486-1_microlinux.txz: Added.
multimedia/dvgrab-3.5-i486-1_microlinux.txz: Added.
multimedia/amrnb-11.0.0.0-i486-1_microlinux.txz: Added.
xap/openshot-1.4.3-i486-1_microlinux.txz: Added.
l/libgnomecups-0.2.3-i486-1_microlinux.txz: Added.
l/libgnomeprint-2.18.8-i486-1_microlinux.txz: Added.
l/libgnomeprintui-2.18.6-i486-1_microlinux.txz: Added.
+--------------------------+
Wed Sep 24 14:15:56 CEST 2014