@@ -1,0 +1,12 @@
+         |-----handy-ruler------------------------------------------------------|
+libpano13: libpano13 (part of Panorama Tools)
+libpano13:
+libpano13: This is the pano13 library, part of the Panorama Tools by Helmut
+libpano13: Dersch of the University of Applied Sciences Furtwangen.
+libpano13:
+libpano13: 
+libpano13:
+libpano13:
+libpano13:
+libpano13:
+libpano13: Package created by Niki Kovacs <info@microlinux.fr>
