@@ -1,0 +1,12 @@
+     |-----handy-ruler------------------------------------------------------|
+tclap: tclap (library for defining and accessing command line arguments)
+tclap:
+tclap: TCLAP is a small templatized library that provides a simple interface
+tclap: for defining and accessing command line arguments. It was initially
+tclap: inspired by the user friendly CLAP libary.
+tclap:
+tclap: 
+tclap:
+tclap:
+tclap:
+tclap: Package created by Niki Kovacs <info@microlinux.fr>
