@@ -1,0 +1,4 @@
+An easy to use cross-platform panoramic imaging toolchain based on
+Panorama Tools. With hugin you can assemble a mosaic of photographs
+into a complete immersive panorama, stitch any series of overlapping
+pictures and much more.
