@@ -1,0 +1,10 @@
+PRGNAM="hugin"
+VERSION="2013.0.0"
+HOMEPAGE="http://hugin.sourceforge.net/"
+DOWNLOAD="http://downloads.sourceforge.net/hugin/hugin-2013.0.0.tar.bz2"
+MD5SUM="cc6c768df2aedc24a9a081754de05f39"
+DOWNLOAD_x86_64=""
+MD5SUM_x86_64=""
+REQUIRES="enblend-enfuse exiftool lensfun libpano13 tclap wxPython"
+MAINTAINER="titopoquito"
+EMAIL="titopoquito@gmail.com"
