@@ -1,0 +1,12 @@
+     |-----handy-ruler------------------------------------------------------|
+hugin: Hugin (Panorama photo stitcher)
+hugin:
+hugin: An easy to use cross-platform panoramic imaging toolchain based on
+hugin: Panorama Tools. With Hugin you can assemble a mosaic of photographs
+hugin: into a complete immersive panorama, stitch any series of overlapping
+hugin: pictures and much more.
+hugin:
+hugin: 
+hugin:
+hugin:
+hugin: Package created by Niki Kovacs <info@microlinux.fr>
